Menambahkan icon pada title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&amp;display=swap" rel="stylesheet">
+    <link rel="icon" href="./res/bsre_icon.ico">
     <title>BSrE Policy Privacy</title>    
     <link href="./res/app.097dcf43.css" rel="preload" as="style">
     <link href="./res/app.097dcf43.css" rel="stylesheet">
@@ -513,25 +514,6 @@
     </script>
     <script src="./res/app.cd243220.js">
     </script>
-    <div>
-        <div class="grecaptcha-badge" data-style="bottomright"
-            style="width: 256px; height: 60px; display: block; transition: right 0.3s; position: fixed; bottom: 14px; right: -186px; box-shadow: gray 0px 0px 5px; border-radius: 2px; overflow: hidden;">
-            <div class="grecaptcha-logo">
-                <iframe title="reCAPTCHA" width="256" height="60" role="presentation" name="a-ckcbvohy0w1i"
-                    frameborder="0" scrolling="no"
-                    sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox allow-storage-access-by-user-activation"
-                    src="./res/anchor.html">
-                </iframe>
-            </div>
-            <div class="grecaptcha-error">
-            </div>
-            <textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response"
-                style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;">
-            </textarea>
-        </div>
-        <iframe style="display: none;" src="./res/saved_resource.html">
-        </iframe>
-    </div>
 </body>
 
 </html>
